Use pointer cursor to solve tap issue on iPhone

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ html, body {
   color: #fff;
   font-family: 'Verdana', 'sans-serif';
   font-size: 20px;
+  cursor: pointer;
 }
 
 h1 {
